<resources>
    <string name="app_name">Dota2Traker</string>
    <string name="action_settings">Settings</string>
    <string name="dotaId">Dota2 id:%s</string>
    <string name="offline">Offline</string>
    <string name="online">Online</string>
    <string name="busy">Busy</string>
    <string name="away">Away</string>
    <string name="snooze">Snooze</string>
    <string name="looktotrade">Looking to trade</string>
    <string name="looktoplay">Looking to play</string>
    <string name="status">status: %s</string>
    <string name="search_title">Search Player</string>
    <string name="search_hint">Player\'s Dota2 ID</string>
    <string name="search">search</string>
    <string name="cancel">cancel</string>
    <string name="wrong_id">wrong id</string>
    <string name="no_player_info">No Player Information</string>
    <string name="iv_avatar_des">Player Avatar</string>
    <string name="lobby0">Public matchmaking</string>
    <string name="lobbby1">Practise</string>
    <string name="lobby2">Tournament</string>
    <string name="lobby3">Tutorial</string>
    <string name="lobby4">Co-op with bots</string>
    <string name="lobby5">Team match</string>
    <string name="lobby6">Solo Queue</string>
    <string name="lobby7">Ranked Matchmaking</string>
    <string name="lobby8">1v1 Solo Mid</string>
    <string name="lobby9">Invalid</string>
    <string name="win">win</string>
    <string name="lost">lost</string>
    <string name="hero">hero</string>
    <string name="result">result</string>
    <string name="time">time</string>
    <string name="load_suc">Player Data Loaded</string>
    <string name="load_fail">load data fail, pls check the net work connection</string>
    <string name="net_error">network error</string>
    <string name="transition_avatar">avatar</string>
    <string name="k_d_a">K/D/A</string>
    <string name="duration">duration</string>
    <string name="lobby_type">lobby</string>
    <string name="game_mode">mode</string>
    <string name="item">item</string>
    <string name="match_detail_title">"Match "</string>
    <string name="none">None</string>
    <string name="allpick">All Pick</string>
    <string name="catain_mode">Captain\'s Mode</string>
    <string name="random_draft">Random Draft</string>
    <string name="single_draft">Single Draft</string>
    <string name="all_random">All Random</string>
    <string name="intro">Intro</string>
    <string name="diretide">Diretide</string>
    <string name="re_cap_mode">Reverse Captain\'s Mode</string>
    <string name="greeviling">The Greeviling</string>
    <string name="tutorial">Tutorial</string>
    <string name="mid_only">Mid Only</string>
    <string name="least_play">Least Played</string>
    <string name="new_player_pool">New Player Pool</string>
    <string name="compendium">Compendium Matchmaking</string>
    <string name="catains_draft">Captains Draft</string>
    <string name="radiant_win">Radiant Win</string>
    <string name="dire_lost">Dire Lost</string>
    <string name="dire_win">Dire Win</string>
    <string name="radiant_lost">Radiant Lost</string>
    <string name="damage_rate">damage:%d%%</string>
    <string name="in_battle">in battle:%d%%</string>
    <string name="anony_player_name">Anonymous</string>
    <string name="no_player_hint">click the add button to follow a player</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="action_share">share</string>
    <string name="share_title">Share Match</string>
    <string name="rcv_empty_string">Press the button below to follow a player</string>
</resources>
