<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            style="@style/detail_title_summary"
            android:text="@string/time" />

        <TextView
            android:id="@+id/tv_time_ago"
            style="@style/detail_title_data"
            tools:text="16 hours ago" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            style="@style/detail_title_summary"
            android:text="@string/duration" />

        <TextView
            android:id="@+id/tv_duration"
            style="@style/detail_title_data"
            tools:text="16 hours" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.3"
        android:orientation="vertical">
        <TextView
            style="@style/detail_title_summary"
            android:text="@string/lobby_type" />

        <TextView
            android:id="@+id/tv_lobby_type"
            style="@style/detail_title_data"
            android:singleLine="true"
            tools:text="normal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            style="@style/detail_title_summary"
            android:text="@string/game_mode" />

        <TextView
            android:id="@+id/tv_game_mode"
            style="@style/detail_title_data"
            tools:text="random" />
    </LinearLayout>

</LinearLayout>