<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/match_player_item_margin"
    android:layout_marginRight="@dimen/match_player_item_margin"
    android:layout_marginTop="@dimen/match_player_item_margin"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/iv_hero_avatar"
        android:layout_width="@dimen/mpi_iv_hero_width"
        android:layout_height="@dimen/mpi_iv_hero_height"
        android:contentDescription="@string/hero"
        android:scaleType="fitXY"
        android:layout_gravity="center_vertical"
        android:src="@drawable/alchemist" />


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingEnd="2dp"
        android:paddingLeft="5dp"
        android:paddingRight="2dp"
        android:paddingStart="5dp">

        <TextView
            android:id="@+id/tv_player_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textColor="@color/radiant_green"
            android:textSize="13sp"
            tools:text="Dendi" />

        <TextView
            android:id="@+id/tv_in_battle"
            style="@style/tv_rate"
            tools:text="in battle:20%" />

        <TextView
            android:id="@+id/tv_damage"
            style="@style/tv_rate"
            tools:text="damage:30%" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_kda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp"
        tools:text="12/1/12" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/iv_item_0"
                style="@style/iv_item"
                android:contentDescription="@string/item"
                android:src="@drawable/wind_lace" />

            <ImageView
                android:id="@+id/iv_item_1"
                style="@style/iv_item"
                android:contentDescription="@string/item"
                android:src="@drawable/gem" />

            <ImageView
                android:id="@+id/iv_item_2"
                style="@style/iv_item"
                android:contentDescription="@string/item"
                android:src="@drawable/ward_dispenser" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/iv_item_3"
                style="@style/iv_item"
                android:contentDescription="@string/item"
                android:src="@drawable/blink" />

            <ImageView
                android:id="@+id/iv_item_4"
                style="@style/iv_item"
                android:contentDescription="@string/item"
                android:src="@drawable/eagle" />

            <ImageView
                android:id="@+id/iv_item_5"
                style="@style/iv_item"
                android:contentDescription="@string/item"
                android:src="@drawable/blink" />
        </LinearLayout>
    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_player_avatar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/iv_avatar_des"
        android:scaleType="centerCrop"
        android:src="@drawable/portrait_unknown"
        app:civ_border_color="#FFFFFFFF"
        app:civ_border_width="2dp" />

</LinearLayout>